# Blopper

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  views.py
blopper/: asgi.py  settings.py  urls.py  wsgi.py
blopper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
main_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_auto_20200207_1744.py  0002_auto_20200212_0024.py  0003_auto_20200207_1836.py  0004_auto_20200207_1921.py  0005_auto_20200207_2205.py  0006_auto_20200208_0128.py  0006_auto_20200208_0130.py  0006_auto_20200208_0205.py  0007_auto_20200208_0206.py  0008_merge_20200208_1843.py  0009_auto_20200208_1843.py  0010_auto_20200210_0333.py  0011_merge_20200210_1903.py  0012_auto_20200210_2344.py
main_app/registration/: login.html
main_app/static/main_app/: articles.css  base.css  blop_create.css  detail.css  home.css  user.css  videos_images.css
main_app/templates/: user.css  user.html
main_app/templates/main_app/: articles.html  base.html  blop_create.html  blop_form.html  detail.html  home.html  images.html  user.html  videos.html
main_app/templates/registration/: signup.html
