[tool.poetry]
name = "blopper"
version = "0.1.0"
description = ""
authors = ["Jeff-Enriquez <jeff.t.hawkes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.4"
Django = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
