[tool.poetry]
name = "blopper"
version = "0.1.0"
description = ""
authors = ["Jeff-Enriquez <jeff.t.hawkes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.4"
Django = "^3.1.6"
Pillow = "^7.0.0"
django-embed-video = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
